// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/blockIconSelector return an icon correctly 1`] = `
<div>
  <div
    class="IconSelector"
  >
    <div
      aria-label="menuwrapper"
      class="MenuWrapper"
      role="button"
    >
      <div
        class="octo-icon size-l"
      >
        <span>
          👍
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/blockIconSelector return menu on click 1`] = `
<div>
  <div
    class="IconSelector"
  >
    <div
      aria-label="menuwrapper"
      class="MenuWrapper"
      role="button"
    >
      <div
        class="octo-icon size-l"
      >
        <span>
          👍
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/blockIconSelector return no element with no icon 1`] = `<div />`;

exports[`components/blockIconSelector return no icon after click on remove menu 1`] = `<div />`;

exports[`components/blockIconSelector return no menu in readonly 1`] = `
<div>
  <div
    class="IconSelector"
  >
    <div
      class="octo-icon size-m readonly"
    >
      <span>
        👍
      </span>
    </div>
  </div>
</div>
`;
